--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-<title>ROVYN — Веб-разработка и дизайн</title>
-<title>ROVYN — Веб-разработка и дизайн</title>
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -28,16 +24,16 @@
                     <nav class="nav-link">
                         <ul class="link-list">
                             <li class ="link-item">
-                                <a href="">Услуги</a>
+                                <a href="#services">Услуги</a>
                             </li>
                             <li class ="link-item">
-                                <a href="">Спецпредложение</a>
+                                <a href="#package">Спецпредложение</a>
                             </li>
                             <li class ="link-item">
-                                <a href="">Блог</a>
+                                <a href="#blog">Блог</a>
                             </li>
                             <li class ="link-item">
-                                <a href="">Контакты</a>
+                                <a href="tel:+1234567890">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -62,8 +58,18 @@
                         </div>
                         
                         <div class="left-btn">
-                            <button>Связаться со мной</button>
+                            <button onclick="openTelegram()">Связаться со мной</button>
                         </div>
+                        <style>
+                            .left-btn button{
+                            cursor: pointer;
+                            }
+                        </style>
+						<script>
+						function openTelegram() {
+						  window.open('https://web.telegram.org/', '_blank');
+						}
+						</script>
                         <div class="hero-stack">
                             <div class="stack">
                                 <span>Стек:</span>
@@ -121,7 +127,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services " id="services">
             <div class="container">
                 <div class="services-heading">
                     <h2>Услуги</h2>
@@ -175,16 +181,22 @@
                         </div>
                         <div class="offer-btn">
                             <button id="btn">Заказать</button>
+							<style>
+								.offer-btn button{
+								cursor: pointer;
+								}
+							</style>
                             <label class="checkbox-label">
                             <span class="checkbox-text">Данная сумма не является точной, она может меняться в зависимости от ваших требований</span> 
                             </label>
                         </div>
                     </form>
+                    
                 </div>
             </div>
         </div>
         </section>
-        <section class="package">
+        <section class="package"id="package">
             <div class="container">
                 <div class="package-heading">
                     <h2>Пакеты</h2>
@@ -227,7 +239,7 @@
                 </div>
             </div>
         </section>
-        <section class="blog">
+        <section class="blog" id="blog">
             <div class="container">
                 <div class="blog-heading">
                     <h2>Блог</h2>
@@ -240,8 +252,13 @@
                             <span>Как я сократил время загрузки каталога в 3 раза. — 24 авг 2025</span>
                         </div>
                         <div class="blog-more">
-                            <span>Перейти</span>
+                            <span onclick="openGithub()">Перейти</span>
                         </div>
+						<script>
+						function openGithub() {
+						  window.open('https://github.com/', '_blank');
+						}
+						</script>
                     </div>
                     <div class="blog-contant cont">
                         <div class="blog-main">
@@ -250,8 +267,13 @@
                             <span>Пошаговая форма заказа с валидацией на JS и PHP. — 15 июн 2025</span>
                         </div>
                         <div class="blog-more">
-                            <span>Перейти</span>
+                            <span onclick="openGithub()">Перейти</span>
                         </div>
+                        <style>
+                            .blog-more span{
+                            cursor: pointer;
+                            }
+                        </style>
                     </div>
                 </div>
             </div>
@@ -272,16 +294,16 @@
                         <nav>
                             <ul>
                                 <li>
-                                    <a href="">Услуги</a>
+                                    <a href="#services">Услуги</a>
                                 </li>
                                 <li>
-                                    <a href="">Спецпредложение</a>
+                                    <a href="#package">Спецпредложение</a>
                                 </li>
                                 <li>
-                                    <a href="">Блог</a>
+                                    <a href="#blog">Блог</a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="https://github.com/">
                                         <svg width="32" height="20" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_33_128)">
                                             <path d="M18 37.9999C8 40.9999 8 32.9999 4 31.9999M32 43.9999V36.2599C32.075 35.3062 31.9462 34.3475 31.622 33.4475C31.2979 32.5474 30.7859 31.7267 30.12 31.0399C36.4 30.3399 43 27.9599 43 17.0399C42.9995 14.2475 41.9254 11.5623 40 9.53988C40.9117 7.09689 40.8472 4.39657 39.82 1.99988C39.82 1.99988 37.46 1.29988 32 4.95988C27.416 3.71752 22.584 3.71752 18 4.95988C12.54 1.29988 10.18 1.99988 10.18 1.99988C9.15275 4.39657 9.08829 7.09689 10 9.53988C8.06025 11.5773 6.98505 14.2868 7 17.0999C7 27.9399 13.6 30.3199 19.88 31.0999C19.222 31.7798 18.7145 32.5907 18.3906 33.4797C18.0667 34.3687 17.9336 35.316 18 36.2599V43.9999" stroke="#F3F3F3" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
